Speech Recognition property is added in the Calci which makes the simple calculator smart

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta content="utf-8" http-equiv="encoding">
         <link rel="stylesheet" type="text/css" href="sytle.css">
         <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet"> 
         <title>My simple Calculator</title>
@@ -9,12 +11,20 @@
         <div id="container">
             <div id="calculator">
                <div id="result">
-                   <div id="history">
-                       <p id="history-value"></p>
-                   </div>
-                   <div id="output">
-                       <p id="output-value"></p>
-                   </div>
+                   <div id="output-text">
+                    <div id="history">
+                        <p id="history-value"></p>
+                    </div>
+                    <div id="output">
+                        <p id="output-value"></p>
+                    </div>
+                </div>
+                <div id="output-microphone">
+                    <span id="microphone"></span>
+                    <span class="tooltip">Operations are plus, minus, multiply, divide &amp; reminder
+						The user input format is number + operation + number<br><br>
+						Eg: 2 multiply 5 will be 2 &times </span>
+                </div>
                    <div  id="keyboard">
                        <button class="operator" id="clear">C</button>
                        <button class="operator" id="backspace">CE</button>
